# actix-web-template

./: .env  .gitignore  Cargo.toml  database.db
main/: Cargo.toml
main/src/: lib.rs  main.rs
main/src/app/: mod.rs
main/src/features/upload/: controller.rs  mod.rs  services.rs
main/src/features/users/: controller.rs  mod.rs  services.rs
main/src/shared/: mod.rs
main/src/shared/db/: mod.rs  sea_db.rs  sqlx_db.rs
main/src/utils/: mod.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/entity/: mod.rs  post.rs  prelude.rs
utils/: Cargo.toml
utils/src/: jwt.rs  lib.rs
