[workspace]
resolver = "3"
members = ["main","utils"]

[workspace.dependencies]
actix-web = "4"
env_logger = "0.11.10"
futures = "0.3.32"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6" , features = ["sqlite","runtime-tokio-native-tls","macros"] }
anyhow = "1.0.102"
uuid = "1.23.1"
actix-multipart = "0.7.2"
tokio = { version = "1", features = ["fs", "io-util"] }
