[workspace]
resolver = "3"
members = ["main","utils","migration"]

[workspace.dependencies]
actix-web = "4"
env_logger = "0.11.10"
futures = "0.3.32"
futures-util = "0.3.32"
sqlx = { version = "0.8.6" , features = ["sqlite","runtime-tokio-native-tls","macros"] }
anyhow = "1.0.102"
uuid = "1.23.1"
actix-multipart = "0.7.2"
tokio = { version = "1", features = ["fs", "io-util"] }
serde = { version = "1.0.228" }
sea-orm = { version = "2.0.0-rc" }
tracing-subscriber = { version = "0.3.23" }
tracing = "0.1.44"
