[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true ,features = ["derive"] }
sqlx = { workspace = true, features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
sea-orm = { workspace = true, features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print",
] }
tracing-subscriber = { workspace = true,features = ["env-filter"] }
tracing = {workspace = true}
